# projeto-agent-ia

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: auto-merge.yml  ci-release.yml
app/: main.py
app/cli/: agent.py  main.py
app/core/: policies.py  settings.py
app/db/: base.py  init_db.py  models.py
app/models/: domain.py
app/services/: ai.py  ai_providers.py  checkmk_playbooks.py  checkmk_state.py  command_catalog.py  correction_policy.py  discovery.py  dynamic_agent.py  filesystem.py  operation_intent.py  persistence.py  recurrence.py  smart_agent.py  ssh.py  telemetry.py  workflow.py
config/: safety.yml
config/playbooks/: vpn-access.yml
docs/: versionamento.md
scripts/: install-oracle-linux-8.sh  install.sh
tests/: test_ai_providers.py  test_command_catalog.py  test_operation_intent.py  test_policies.py  test_provider_menu.py  test_ssh_auth.py  test_telemetry.py  test_vpn_playbook.py
