[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-ia-infra"
version = "0.1.0"
description = "Agent IA para troubleshooting seguro de infraestrutura"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
agent = "app.cli.agent:main"

[tool.setuptools.packages.find]
include = ["app*"]
